# GCrazySpinners

./: CMakeLists.txt
crazy_spinners/: AppSettings.h  CMakeLists.txt  CircleWindow.cpp  CircleWindow.h  crazy_spinners.h  main.cpp  settings.gschema.xml  svg-color.h
